# StockMarketForecastingAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/: data_reader.ipynb  getdates.py  stock_data.py  test.py
src/google_news/: google_news.py
src/news/: news_data.py
src/news/utils/: functions.py
src/utils/: functions.py
stock_market_forecasting_ai/src/: stock_data.py
stock_market_forecasting_ai/src/data_crawler/: stock_data.py
