[project]
name = "stockmarketforecastingai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 120

[tool.basedpyright]
reportCallIssue =  false
reportArgumentType = false
reportUnknownMemberType = false
reportPossiblyUnboundVariable = false
reportUnknownVariableType = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]
